--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "styled-components": "^5.3.3",
+    "styled-components": "5.2.1",
     "vite": "^2.7.13",
+    "vite-plugin-babel-macros": "^1.0.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
